--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,32 @@
 .sk {
-    background-image: linear-gradient(270deg, #1f1f1f -23%, #111111 137%);
+    /* background-image: linear-gradient(270deg, #252525 -23%, #141414 137%); */
     margin-top: 100px;
     width: 20%;
     height: 40rem;
-    box-shadow: inset -2px -3px 20px #252525;
+    
     border-radius: 10px;
-    transition: all .4s;
+    transition: all 1s;
 }
 .sk-name{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: larger;
-    color: rgb(255, 252, 252);
+    color: rgb(255, 255, 255);
     margin: 20px;
 }
 .iconP{
     padding: 4rem;
     transform: scale(5);
 }
+.custom{
+    box-shadow: inset -2px -3px 20px #252525; 
+    background-image: linear-gradient(270deg, #252525 -23%, #141414 137%);
+}
 
 .ph{
     height: 50%;
-    border: 1px solid rgba(176, 176, 176, 0.597);
+    /* border: 1px solid rgba(176, 176, 176, 0.597); */
     background-color: rgba(177, 177, 177, 0.078);
-    box-shadow: 5px 5px 20px rgba(66, 66, 66, 0.562);
+    box-shadow: inset 6px -4px 20px 4px rgb(66,66,66,0.562);
     border-radius: 5px 5px 50% 1%;
     overflow: hidden;   
 }
@@ -39,10 +43,17 @@
 .profile:hover {
     transform: scale(1.1) !important;
 }
-.sk:hover{
-    transform: translateY(-0.5rem);
+.sk:hover .iconP{
+    transform: scale(5.2);
 }
-@media only screen and (min-width: 1000px) {
+
+.proj-ss{
+    margin: -15px -15px;
+    height: 20rem ;
+    width: 20rem ;
+}
+
+@media only screen and (min-width: 1000px){
     .plane {
         animation: plan 5s infinite ease-in-out;
     }
@@ -139,10 +150,10 @@
 
     p{
         padding: 20px;
-        font-size: 20px;
+        font-size: 1.2rem;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         /* box-shadow: 5px 2px 8px grey; */
-        color: rgb(255, 0, 0);
+        color: rgb(227, 1, 1);
         width: 60%;
         border: 1px solid rgb(53, 53, 53);
         border-radius: 10px;
@@ -185,17 +196,15 @@
     }
 
     .sk-Project{
-        height: 30rem !important;
-        background-color: #a10018 !important;
+        height: 27rem !important;
+        background-color: rgb(53, 53, 53);
+        box-shadow: 6px 6px 30px rgb(106, 106, 106) !important;
     }
     
     .phproj{
-        height: 55%;
-        border-radius: 5px 5px 25% 25%;
-    }
-    
-    .sk:hover{
-        transform: translateY(-0.5rem);
+        height: 60%;
+        border-radius: 10px 10px 25% 25%;
+        /* box-shadow: inset 6px,6px,6px rgb(106, 106, 106) !important; */
     }
     
     .col1 {
@@ -229,18 +238,17 @@
         display: flex;
         justify-content: space-around;
     }
-    .proj{
+    /* .proj{
         width: 25%;
         padding: 20px;
-        border: 1px solid grey;
         border-radius: 25px;
         height: 200px;
         transition: transform .5s;
-        background-color: #A51C30;
+        background-color: #A51C30 !important;
         box-shadow: 1px 4px 20px 0px rgb(106 106 106);
         color: white;
         margin-top: 10px;
-    }
+    } */
     .bg1{
         background-repeat: no-repeat;
         margin-top: -40px;
@@ -253,7 +261,6 @@
     .proj:hover{
         transform: translateY(-0.5em);
         box-shadow: 0px 0px 0px;
-        background-color: #a10018;;
     }
     .pr1{
         /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
@@ -357,10 +364,10 @@
 
     p {
         margin:auto;
-        font-size: 20px;
+        font-size: 1rem;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         box-shadow: 5px 5px 20px rgb(62, 62, 62);
-        color: rgb(255, 47, 47);
+        color: rgb(159, 3, 3);
         width: 65%;
         border-radius: 10px;
         background-image: linear-gradient(198deg, #3b3b3b94 -49%, #1d1d1da1 72%);
@@ -427,7 +434,7 @@
         margin: 10px auto;
         height: auto;
         background-image: linear-gradient(270deg, #282828 -23%, #000000 137%);
-        width: 50%;
+        width: 55%;
         border: 1px solid rgb(70, 70, 70);
         border-radius: 10px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -452,7 +459,7 @@
         padding: 20px;
         border: 1px solid grey;
         border-radius: 25px;
-        /* height: 200px; */
+        height: 200px;
         transition: transform .5s;
         background-color: #a41127;
         box-shadow: 5px 5px 5px rgb(106, 106, 106);
@@ -472,7 +479,7 @@
         transform: scale(1.1);
         /* padding: 15px; */
         box-shadow: 0px 0px 0px;
-        background-color: #a10018;;
+        /* background-color: #a10018; */
     }
     .pr1{
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
