--- a/css/main.css
+++ b/css/main.css
@@ -37,14 +37,14 @@
     color: rgb(223, 223, 223);
 }
 .profile {
-    transition: transform .5s;
+    transition: all .5s;
 }
 
 .profile:hover {
     transform: scale(1.1) !important;
 }
-.sk:hover .iconP{
-    transform: scale(5.2);
+.sk:hover{
+    transform: translateY(-1rem);
 }
 
 .proj-ss{
@@ -158,7 +158,7 @@
         border: 1px solid rgb(53, 53, 53);
         border-radius: 10px;
         background-image: linear-gradient(321deg, #3b3b3b94 -49%, #1d1d1da1 72%);
-        transition: transform .5s;
+        transition: all .5s;
 
     }
 
