--- a/css/main.css
+++ b/css/main.css
@@ -45,11 +45,11 @@
     height:1rem;
 } */
 
-.profile:hover {
+.sk:hover .profile {
     transform: scale(1.1) !important;
 }
 .sk:hover{
-    transform: translateY(-1rem);
+    transform: translateY(-5px);
 }
 
 .proj-ss{
@@ -82,7 +82,7 @@
     }
 
     .name {
-        margin-left: 10%;
+        margin: 30% 10%;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 70px;
         animation: init .5s 1 ease-out;
@@ -120,19 +120,22 @@
     .intro {
         display: flex;
         justify-content: space-between;
-
     }
 
     .meriphoto {
-        height: 90%;
-        width: 450px;
-        /* transition: transform 0.5s; */
+        margin-top: 4rem;
+        height: 60%;
+        width: 30%;
     }
 
     #about {
-        background-image: linear-gradient(189deg, #1c1c1c -23%, #131313 137%);
+        background-image: linear-gradient(180deg, rgb(237 237 237) -1%, rgb(0 0 0) 13%);
     }
-
+    .dev{
+        border: 1px solid white;
+        height: 10rem;
+        width: 10rem;
+    }
     .bg {
         margin-left: -10px;
         height: 700px;
@@ -153,7 +156,6 @@
         border-radius: 10px;
         background-image: linear-gradient(321deg, #3b3b3b94 -49%, #1d1d1da1 72%);
         transition: all .5s;
-
     }
     .p-1{
         /* margin: auto; */
@@ -161,7 +163,9 @@
     }
     .p1 {
         display: flex;
-        margin: 5rem 0rem;
+        justify-content: space-around;
+        /* margin: 5rem 0rem; */
+        margin: 4rem;
     }
 
     p:hover {
@@ -345,13 +349,6 @@
         background-image: linear-gradient(270deg, #282828 -23%, #000000 137%);
         height: auto;
         padding: 5px;
-    }
-
-    .dev {
-        margin-top: 30px;
-        margin-left: 30px;
-        transform: scale(1.5);
-        filter: drop-shadow(2px 2px 5px rgba(225, 225, 225, 0.5));
     }
 
     .bg {
